# fstabgen

./: Cargo.toml
src/: main.rs
