[package]
name = "fstabgen"
version = "0.1.0"
authors = ["eladmin <luisaguero011@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# strip = "symbols"

[dependencies]
nix = "0.21.0"
colored = "2.0.0"
fstab = "0.4.0"
youchoose = "0.1.1"
question = "0.2.2"
itertools = "0.*"
